--- a/pycat.ipynb
+++ b/pycat.ipynb
@@ -235,7 +235,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc16424e7b8>"
+       "<graphviz.dot.Digraph at 0x7fa3a46fe400>"
       ]
      },
      "execution_count": 3,
@@ -345,7 +345,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc15598fba8>"
+       "<graphviz.dot.Digraph at 0x7fa3a4062c18>"
       ]
      },
      "execution_count": 4,
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Frame at 0x7fc15598ff98>"
+       "<__main__.Frame at 0x7fa3a4070048>"
       ]
      },
      "execution_count": 6,
@@ -476,7 +476,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "prefix = <frame:Hello World> id:7fc15599da90\n"
+      "prefix = <frame:Hello World> id:7fa3a4070a58\n"
      ]
     }
    ],
@@ -567,8 +567,8 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 40)\">\n",
        "<title>%3</title>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-40 162.586,-40 162.586,4 -4,4\"/>\n",
-       "<!-- 140468341614184 -->\n",
-       "<g id=\"node1\" class=\"node\"><title>140468341614184</title>\n",
+       "<!-- 140340808320840 -->\n",
+       "<g id=\"node1\" class=\"node\"><title>140340808320840</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"79.293\" cy=\"-18\" rx=\"79.0865\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"79.293\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:Hello World</text>\n",
        "</g>\n",
@@ -576,7 +576,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc1559aa7f0>"
+       "<graphviz.dot.Digraph at 0x7fa3a4070908>"
       ]
      },
      "execution_count": 10,
@@ -747,7 +747,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc15598fba8>"
+       "<graphviz.dot.Digraph at 0x7fa3a4062c18>"
       ]
      },
      "execution_count": 12,
@@ -791,14 +791,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "<frame:Hello> id:7fc1559aaf60\n",
-      "\tstring = <str:typecasted> id:7fc1559ba0b8\n",
-      "\tself = <frame:Hello> id:7fc1559aaf60 _/\n",
-      "\tsome = <frame:attribute> id:7fc1559aaf28\n",
-      "\t\tframe = <frame:slot> id:7fc1559ba048\n",
-      "\t0: <frame:World> id:7fc1559aafd0\n",
-      "\t1: <frame:Hello> id:7fc1559aaf60 _/\n",
-      "\t2: <str:string> id:7fc1559aa208\n"
+      "<frame:Hello> id:7fa3a407f048\n",
+      "\tself = <frame:Hello> id:7fa3a407f048 _/\n",
+      "\tstring = <str:typecasted> id:7fa3a407f208\n",
+      "\tsome = <frame:attribute> id:7fa3a4087fd0\n",
+      "\t\tframe = <frame:slot> id:7fa3a407f198\n",
+      "\t0: <frame:World> id:7fa3a407f0b8\n",
+      "\t1: <frame:Hello> id:7fa3a407f048 _/\n",
+      "\t2: <str:string> id:7fa3a407f128\n"
      ]
     },
     {
@@ -815,74 +815,74 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 202)\">\n",
        "<title>%3</title>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-202 468.871,-202 468.871,4 -4,4\"/>\n",
-       "<!-- 140468341616480 -->\n",
-       "<g id=\"node1\" class=\"node\"><title>140468341616480</title>\n",
+       "<!-- 140340808380488 -->\n",
+       "<g id=\"node1\" class=\"node\"><title>140340808380488</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"53.9452\" cy=\"-95\" rx=\"53.8905\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-91.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:Hello</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341616480 -->\n",
-       "<g id=\"edge2\" class=\"edge\"><title>140468341616480&#45;&gt;140468341616480</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808380488 -->\n",
+       "<g id=\"edge1\" class=\"edge\"><title>140340808380488&#45;&gt;140340808380488</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M46.1662,-113.153C44.9694,-122.539 47.5624,-131 53.9452,-131 57.8347,-131 60.317,-127.858 61.3919,-123.28\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"64.8943,-123.262 61.7243,-113.153 57.898,-123.032 64.8943,-123.262\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-134.8\" font-family=\"Times,serif\" font-size=\"14.00\">self</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341616480 -->\n",
-       "<g id=\"edge6\" class=\"edge\"><title>140468341616480&#45;&gt;140468341616480</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808380488 -->\n",
+       "<g id=\"edge6\" class=\"edge\"><title>140340808380488&#45;&gt;140340808380488</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M41.131,-112.699C34.0527,-129.996 38.3241,-149 53.9452,-149 66.6374,-149 71.8369,-136.454 69.5439,-122.472\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"72.8656,-121.357 66.7594,-112.699 66.1336,-123.275 72.8656,-121.357\"/>\n",
        "<text text-anchor=\"middle\" x=\"53.9452\" y=\"-152.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n",
        "</g>\n",
-       "<!-- 140468341678264 -->\n",
-       "<g id=\"node2\" class=\"node\"><title>140468341678264</title>\n",
+       "<!-- 140340808380936 -->\n",
+       "<g id=\"node2\" class=\"node\"><title>140340808380936</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-180\" rx=\"59.2899\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-176.3\" font-family=\"Times,serif\" font-size=\"14.00\">str:typecasted</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341678264 -->\n",
-       "<g id=\"edge1\" class=\"edge\"><title>140468341616480&#45;&gt;140468341678264</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808380936 -->\n",
+       "<g id=\"edge2\" class=\"edge\"><title>140340808380488&#45;&gt;140340808380936</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M83.01,-110.253C95.9517,-117.127 111.585,-125.208 125.89,-132 147.617,-142.316 172.132,-152.959 192.649,-161.594\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"191.493,-164.904 202.069,-165.536 194.195,-158.446 191.493,-164.904\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-148.8\" font-family=\"Times,serif\" font-size=\"14.00\">string</text>\n",
        "</g>\n",
-       "<!-- 140468341616424 -->\n",
-       "<g id=\"node3\" class=\"node\"><title>140468341616424</title>\n",
+       "<!-- 140340808417232 -->\n",
+       "<g id=\"node3\" class=\"node\"><title>140340808417232</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-126\" rx=\"63.8893\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-122.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:attribute</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341616424 -->\n",
-       "<g id=\"edge3\" class=\"edge\"><title>140468341616480&#45;&gt;140468341616424</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808417232 -->\n",
+       "<g id=\"edge3\" class=\"edge\"><title>140340808380488&#45;&gt;140340808417232</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M102.455,-103.064C124.091,-106.736 150.027,-111.139 173.367,-115.1\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"173.09,-118.603 183.535,-116.826 174.262,-111.702 173.09,-118.603\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-116.8\" font-family=\"Times,serif\" font-size=\"14.00\">some</text>\n",
        "</g>\n",
-       "<!-- 140468341616592 -->\n",
-       "<g id=\"node5\" class=\"node\"><title>140468341616592</title>\n",
+       "<!-- 140340808380600 -->\n",
+       "<g id=\"node5\" class=\"node\"><title>140340808380600</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-72\" rx=\"57.3905\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-68.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:World</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341616592 -->\n",
-       "<g id=\"edge5\" class=\"edge\"><title>140468341616480&#45;&gt;140468341616592</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808380600 -->\n",
+       "<g id=\"edge5\" class=\"edge\"><title>140340808380488&#45;&gt;140340808380600</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M99.8511,-85.3334C108.465,-83.7079 117.434,-82.1711 125.89,-81 140.686,-78.9509 156.655,-77.3213 171.761,-76.044\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"172.369,-79.5064 182.056,-75.2151 171.808,-72.529 172.369,-79.5064\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-84.8\" font-family=\"Times,serif\" font-size=\"14.00\">0</text>\n",
        "</g>\n",
-       "<!-- 140468341613064 -->\n",
-       "<g id=\"node6\" class=\"node\"><title>140468341613064</title>\n",
+       "<!-- 140340808380712 -->\n",
+       "<g id=\"node6\" class=\"node\"><title>140340808380712</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"238.585\" cy=\"-18\" rx=\"42.4939\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"238.585\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">str:string</text>\n",
        "</g>\n",
-       "<!-- 140468341616480&#45;&gt;140468341613064 -->\n",
-       "<g id=\"edge7\" class=\"edge\"><title>140468341616480&#45;&gt;140468341613064</title>\n",
+       "<!-- 140340808380488&#45;&gt;140340808380712 -->\n",
+       "<g id=\"edge7\" class=\"edge\"><title>140340808380488&#45;&gt;140340808380712</title>\n",
        "<path fill=\"none\" stroke=\"green\" d=\"M83.2298,-79.6833C96.081,-72.9756 111.581,-65.2311 125.89,-59 148.289,-49.2464 173.832,-39.7541 194.832,-32.3634\"/>\n",
        "<polygon fill=\"green\" stroke=\"green\" points=\"196.145,-35.6123 204.437,-29.0174 193.843,-29.0019 196.145,-35.6123\"/>\n",
        "<text text-anchor=\"middle\" x=\"141.39\" y=\"-62.8\" font-family=\"Times,serif\" font-size=\"14.00\">2</text>\n",
        "</g>\n",
-       "<!-- 140468341678152 -->\n",
-       "<g id=\"node4\" class=\"node\"><title>140468341678152</title>\n",
+       "<!-- 140340808380824 -->\n",
+       "<g id=\"node4\" class=\"node\"><title>140340808380824</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"418.075\" cy=\"-126\" rx=\"46.5926\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"418.075\" y=\"-122.3\" font-family=\"Times,serif\" font-size=\"14.00\">frame:slot</text>\n",
        "</g>\n",
-       "<!-- 140468341616424&#45;&gt;140468341678152 -->\n",
-       "<g id=\"edge4\" class=\"edge\"><title>140468341616424&#45;&gt;140468341678152</title>\n",
+       "<!-- 140340808417232&#45;&gt;140340808380824 -->\n",
+       "<g id=\"edge4\" class=\"edge\"><title>140340808417232&#45;&gt;140340808380824</title>\n",
        "<path fill=\"none\" stroke=\"blue\" d=\"M302.661,-126C321.745,-126 342.562,-126 361.145,-126\"/>\n",
        "<polygon fill=\"blue\" stroke=\"blue\" points=\"361.214,-129.5 371.214,-126 361.214,-122.5 361.214,-129.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"336.779\" y=\"-129.8\" font-family=\"Times,serif\" font-size=\"14.00\">frame</text>\n",
@@ -891,7 +891,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc1559ba198>"
+       "<graphviz.dot.Digraph at 0x7fa3a407f2e8>"
       ]
      },
      "execution_count": 14,
@@ -1073,7 +1073,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc1559a64e0>"
+       "<graphviz.dot.Digraph at 0x7fa3a407e4e0>"
       ]
      },
      "execution_count": 15,
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "<var:Variable> id:7fc1558ea0b8\n"
+      "<var:Variable> id:7fa3a407e828\n"
      ]
     }
    ],
